--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <!-- Header with logo and navigation -->
   <header>
-    <div>
-      <img src="path-to-logo.png" alt="USCB Campus Life Logo" />
-    </div>
+    <figure>
+      <img alt="USCB Campus Life Logo" src="path-to-logo.png">
+    </figure>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -22,26 +22,31 @@
         <li><a href="#">Staff</a></li>
         <li><a href="#">Resources</a></li>
         <li><a href="#">News</a></li>
-        <li><input type="text" placeholder="Search" /></li>
+        <li><a href="#">Contact</a></li>
+        <li><input type="text" placeholder="Search" aria-label="Search campus life content"></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Main title and image -->
+  <!-- Main title -->
   <main>
     <h1>CAMPUS LIFE</h1>
-    <section>
-      <img src="path-to-main-group-photo.jpg" alt="Campus Life Students" />
+
+    <!-- Hero image and paragraph -->
+    <section class="intro-section">
+      <img src="path-to-main-group-photo.jpg" alt="Campus Life Students">
       <p>
-        Campus Life is the newest department on USC-Beaufort’s Campus! Stay up to date on all things campus life here! <br />
+        Campus Life is the newest department on USC-Beaufort’s Campus! Stay up to date on all things campus life here!
+        <br>
         From upcoming events to club information – this is your one-stop-shop for all things Sand-Shark! Fins up!
       </p>
     </section>
 
-    <!-- Two-column section: Events and Spotlight -->
-    <section style="display: flex; gap: 2rem;">
+    <!-- Events and Shark Spotlight side-by-side section -->
+    <section class="events-spotlight-wrapper">
+
       <!-- Upcoming Events -->
-      <div>
+      <section class="events-box">
         <h2>UPCOMING EVENTS</h2>
         <ul>
           <li>8/17 – Neon Night</li>
@@ -50,25 +55,26 @@
           <li>8/20 – Sharkapalooza</li>
           <li>8/21 – Shark Rave</li>
         </ul>
-      </div>
+      </section>
 
       <!-- Shark Spotlight -->
-      <div>
+      <figure class="spotlight-box">
         <h2>SHARK SPOTLIGHT</h2>
-        <img src="path-to-layla-photo.jpg" alt="Layla Hutto" />
+        <img src="path-to-layla-photo.jpg" alt="Layla Hutto">
         <p>LAYLA HUTTO</p>
-      </div>
+      </figure>
+
     </section>
   </main>
 
   <!-- Footer with social icons -->
   <footer>
     <nav>
-      <ul style="list-style: none; display: flex; gap: 1rem; justify-content: center; padding: 1rem 0;">
-        <li><a href="#"><img src="path-to-facebook-icon.png" alt="Facebook" width="24" height="24" /></a></li>
-        <li><a href="#"><img src="path-to-linkedin-icon.png" alt="LinkedIn" width="24" height="24" /></a></li>
-        <li><a href="#"><img src="path-to-youtube-icon.png" alt="YouTube" width="24" height="24" /></a></li>
-        <li><a href="#"><img src="path-to-instagram-icon.png" alt="Instagram" width="24" height="24" /></a></li>
+      <ul>
+        <li><a href="#"><img src="path-to-facebook-icon.png" alt="Facebook"></a></li>
+        <li><a href="#"><img src="path-to-linkedin-icon.png" alt="LinkedIn"></a></li>
+        <li><a href="#"><img src="path-to-youtube-icon.png" alt="YouTube"></a></li>
+        <li><a href="#"><img src="path-to-instagram-icon.png" alt="Instagram"></a></li>
       </ul>
     </nav>
   </footer>
