--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
       <img alt="USCB Campus Life Logo" src="path-to-logo.png">
     </figure>
     <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Clubs</a></li>
-        <li><a href="#">Staff</a></li>
-        <li><a href="#">Resources</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><input type="text" placeholder="Search" aria-label="Search campus life content"></li>
-      </ul>
+    <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="events.html">Events</a></li>
+  <li><a href="clubs.html">Clubs</a></li>
+  <li><a href="staff.html">Staff</a></li>
+  <li><a href="resources.html">Resources</a></li>
+  <li><a href="news.html">News</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><input type="text" placeholder="Search" /></li>
+</ul>
     </nav>
   </header>
 
