--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
     <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="about.html">About</a></li>
+  <li><a href="About.html">About</a></li>
   <li><a href="events.html">Events</a></li>
   <li><a href="clubs.html">Clubs</a></li>
   <li><a href="staff.html">Staff</a></li>
