--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact – Campus Life</title>
+  <link rel="stylesheet" href="contact.css" />
 </head>
 <body>
 
   <!-- Header with logo and navigation -->
   <header>
     <div>
-      <img src="path-to-logo.png" alt="USCB Campus Life Logo" />
+      <img alt="USCB Campus Life Logo" src="path-to-logo.png" />
     </div>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Clubs</a></li>
         <li><a href="#">Staff</a></li>
         <li><a href="#">Resources</a></li>
         <li><a href="#">News</a></li>
-        <li><input type="text" placeholder="Search" /></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><input type="text" placeholder="Search" aria-label="Search" /></li>
       </ul>
     </nav>
   </header>
@@ -31,30 +33,42 @@
     <h1>CONTACT</h1>
 
     <!-- Banner image -->
-    <section>
+    <section class="contact-banner">
       <img src="path-to-banner-image.jpg" alt="Campus Life Group Photo" />
     </section>
 
     <!-- Contact form section -->
-    <section>
+    <section class="contact-section">
       <h2>Get in touch.</h2>
-      <form action="#" method="post">
-        <label for="name">Your Name</label><br />
-        <input type="text" id="name" name="name" /><br /><br />
+      <form action="https://formspree.io/f/your-form-id" method="POST">
+        <label for="name">Your Name</label>
+        <input id="name" name="name" type="text" required />
 
-        <label for="email">Email Address</label><br />
-        <input type="email" id="email" name="email" /><br /><br />
+        <label for="email">Email Address</label>
+        <input id="email" name="email" type="email" required />
 
-        <label for="phone">Phone Number</label><br />
-        <input type="tel" id="phone" name="phone" /><br /><br />
+        <label for="phone">Phone Number</label>
+        <input id="phone" name="phone" type="tel" />
 
-        <label for="message">Message</label><br />
-        <textarea id="message" name="message" rows="5"></textarea><br /><br />
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
 
         <button type="submit">Submit</button>
       </form>
     </section>
   </main>
+
+  <!-- Footer -->
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#"><img src="path-to-facebook-icon.png" alt="Facebook" /></a></li>
+        <li><a href="#"><img src="path-to-linkedin-icon.png" alt="LinkedIn" /></a></li>
+        <li><a href="#"><img src="path-to-youtube-icon.png" alt="YouTube" /></a></li>
+        <li><a href="#"><img src="path-to-instagram-icon.png" alt="Instagram" /></a></li>
+      </ul>
+    </nav>
+  </footer>
 
 </body>
 </html>
