--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <!-- Contact form section -->
     <section class="contact-section">
       <h2>Get in touch.</h2>
-      <form action="https://formspree.io/f/your-form-id" method="POST">
+      <form action="https://formspree.io/f/xyzjkrzp" method="POST">
         <label for="name">Your Name</label>
         <input id="name" name="name" type="text" required />
 
