--- a/index.html
+++ b/index.html
@@ -46,16 +46,11 @@
     <section class="events-spotlight-wrapper">
 
       <!-- Upcoming Events -->
-      <section class="events-box">
-        <h2>UPCOMING EVENTS</h2>
-        <ul>
-          <li>8/17 – Neon Night</li>
-          <li>8/18 – Evolve into Campus Life</li>
-          <li>8/19 – Rock the Rec</li>
-          <li>8/20 – Sharkapalooza</li>
-          <li>8/21 – Shark Rave</li>
-        </ul>
-      </section>
+ <section class="event-section">
+  <h2>What's Happening?</h2>
+  <p id="event-message">Click below to find out!</p>
+  <button onclick="showRandomEvent()">Show Me an Event</button>
+</section>
 
       <!-- Shark Spotlight -->
       <figure class="spotlight-box">
