--- a/index.html
+++ b/index.html
@@ -46,20 +46,21 @@
     <section class="events-spotlight-wrapper">
 
       <!-- Upcoming Events -->
- <section class="event-section">
-  <h2>What's Happening?</h2>
-  <p id="event-message">Click below to find out!</p>
-  <button onclick="showRandomEvent()">Show Me an Event</button>
-</section>
+<div class="events-spotlight-wrapper">
 
-      <!-- Shark Spotlight -->
-      <figure class="spotlight-box">
-        <h2>SHARK SPOTLIGHT</h2>
-        <img src="path-to-layla-photo.jpg" alt="Layla Hutto">
-        <p>LAYLA HUTTO</p>
-      </figure>
+  <div class="events-box">
+    <h2>What's Happening?</h2>
+    <p id="event-message">Click below to find out!</p>
+    <button onclick="showRandomEvent()">Show Me an Event</button>
+  </div>
 
-    </section>
+  <div class="spotlight-box">
+    <h2>SHARK SPOTLIGHT</h2>
+    <img src="images/layla.png" alt="Layla Hutto">
+    <p>LAYLA HUTTO</p>
+  </div>
+
+</div>
   </main>
 
   <!-- Footer with social icons -->
