--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header with logo and navigation -->
   <header>
     <figure>
-      <img alt="USCB Campus Life Logo" src="path-to-logo.png">
+      <img alt="USCB Campus Life Logo" src="images/Campus Life 2C.png">
     </figure>
     <nav>
     <ul>
