--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Hero image and paragraph -->
     <section class="intro-section">
-      <img src="path-to-main-group-photo.jpg" alt="Campus Life Students">
+      <img src="USCB-Students.jpg" alt="Campus Life Students">
       <p>
         Campus Life is the newest department on USC-Beaufort’s Campus! Stay up to date on all things campus life here!
         <br>
@@ -56,7 +56,7 @@
 
   <div class="spotlight-box">
     <h2>SHARK SPOTLIGHT</h2>
-    <img src="images/layla.png" alt="Layla Hutto">
+    <img src="EmilyWorrell.jpg" alt="Layla Hutto">
     <p>LAYLA HUTTO</p>
   </div>
 
