--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <!-- Header with logo and navigation -->
   <header>
     <div>
-      <img alt="USCB Campus Life Logo" src="path-to-logo.png" />
+      <img alt="USCB Campus Life Logo" src="Campus Life 2C.png" />
     </div>
     <nav>
       <ul>
@@ -34,7 +34,7 @@
 
     <!-- Banner image -->
     <section class="contact-banner">
-      <img src="path-to-banner-image.jpg" alt="Campus Life Group Photo" />
+      <img src="fins_up_orientation_leaders.jpg" alt="Campus Life Group Photo" />
     </section>
 
     <!-- Contact form section -->
