--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
   <!-- Header with logo and navigation -->
   <header>
     <div>
-      <img src="path-to-logo.png" alt="USCB Campus Life Logo" />
+      <img src="Campus Life 2C.png" alt="USCB Campus Life Logo" />
     </div>
     <nav>
     <ul>
@@ -34,7 +34,7 @@
 
     <!-- About text and group image -->
     <section class="about-section">
-      <img src="path-to-group-photo.jpg" alt="Campus Life Group Photo" />
+      <img src="2024-03-15-tour-hargray.jpeg" alt="Campus Life Group Photo" />
       <p>
         Welcome to Campus Life at USC Beaufort!<br><br>
         Campus Life is the heartbeat of student engagement at USCB—and we're proud to be the newest and most spirited department on campus! Blending the energy of Student Life with the excitement of Campus Recreation, we're here to create unforgettable experiences for every Sand Shark.<br><br>
@@ -48,15 +48,15 @@
 
     <!-- Photo Grid -->
     <section class="photo-grid">
-      <img src="path-to-photo1.jpg" alt="Students at fountain" />
-      <img src="path-to-photo2.jpg" alt="Students playing volleyball" />
-      <img src="path-to-photo3.jpg" alt="Group holding USCB flag" />
-      <img src="path-to-photo4.jpg" alt="Students posing in gym" />
-      <img src="path-to-photo5.jpg" alt="Group cheering" />
-      <img src="path-to-photo6.jpg" alt="Group photo in front of Hargray building" />
-      <img src="path-to-photo7.jpg" alt="Group outdoors" />
-      <img src="path-to-photo8.jpg" alt="Students working on laptop" />
-      <img src="path-to-photo9.jpg" alt="Universal trip group" />
+      <img src="IMG_2109.jpg" alt="Students at fountain" />
+      <img src="IMG_42661.jpg" alt="Students playing volleyball" />
+      <img src="2023-2-19-MPAC-Kenny-Brawner-22_600px.jpg" alt="Group holding USCB flag" />
+      <img src="Housing2021.jpg" alt="Students posing in gym" />
+      <img src="Lamda_Pi_Eta.png" alt="Group cheering" />
+      <img src="Screenshot 2025-05-23 092746.jpg" alt="Group photo in front of Hargray building" />
+      <img src="StudentPhoto.jpeg" alt="Group outdoors" />
+      <img src="2024-03-15-tour-hargray.jpeg" alt="Students working on laptop" />
+      <img src="USCB-Student-Ambassadors-in-Rec-Center.jpg" alt="Universal trip group" />
     </section>
   </main>
 
