--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="About.html">About</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Clubs</a></li>
         <li><a href="#">Staff</a></li>
