--- a/events.html
+++ b/events.html
@@ -12,14 +12,15 @@
       <img src="logo.png" alt="USCB Campus Life Logo" class="logo" />
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Clubs</a></li>
-          <li><a href="#">Staff</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#">News</a></li>
-          <li><button class="search-btn">Search</button></li>
+        <li><a href="index.html">Home</a></li>
+  <li><a href="About.html">About</a></li>
+  <li><a href="events.html">Events</a></li>
+  <li><a href="clubs.html">Clubs</a></li>
+  <li><a href="staff.html">Staff</a></li>
+  <li><a href="resources.html">Resources</a></li>
+  <li><a href="news.html">News</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><input type="text" placeholder="Search" /></li>
         </ul>
       </nav>
     </div>
