--- a/events.html
+++ b/events.html
@@ -36,7 +36,7 @@
         <div>USCB</div>
       </div>
       <table>
-        <!-- Add table rows and cells based on screenshot, this will be stylized and refined in CSS -->
+        <!--this will be stylized and refined in CSS -->
         <tr><td>1</td><td>2</td><td>3<br><span class="tag green">Movie Night</span></td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
         <tr><td>8</td><td>9</td><td>10<br><span class="tag orange">Fitness Club</span></td><td>11</td><td>12<br><span class="tag yellow">FIFA Night</span></td><td>13</td><td>14</td></tr>
         <tr><td>15<br><span class="tag pink">MVP Breakfast</span></td><td>16</td><td>17</td><td>18<br><span class="tag yellow">Library Trivia</span></td><td>19</td><td>20</td><td>21</td></tr>
