--- a/events.html
+++ b/events.html
@@ -58,15 +58,15 @@
 
     <section class="resources">
       <div class="resource-card">
-        <img src="presence.jpg" alt="Presence" />
+        <img src="presence.jpg" alt="https://uscb.presence.io/" />
         <p>Presence</p>
       </div>
       <div class="resource-card">
-        <img src="imleagues.jpg" alt="IMLeagues" />
+        <img src="imleagues.jpg" alt="https://www.imleagues.com/spa/portal/home" />
         <p>IMLeagues</p>
       </div>
       <div class="resource-card">
-        <img src="uscb-edu.jpg" alt="USCB.edu" />
+        <img src="uscb-edu.jpg" alt="https://www.uscb.edu/" />
         <p>USCB.edu</p>
       </div>
     </section>
