--- a/events.html
+++ b/events.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="logo-nav">
-      <img src="logo.png" alt="USCB Campus Life Logo" class="logo" />
+      <img src="Campus Life 2C.png" alt="USCB Campus Life Logo" class="logo" />
       <nav>
         <ul>
         <li><a href="index.html">Home</a></li>
@@ -73,11 +73,30 @@
   </main>
 
   <footer>
-    <div class="socials">
-      <a href="#"><img src="fb-icon.png" alt="Facebook" /></a>
-      <a href="#"><img src="ig-icon.png" alt="Instagram" /></a>
-      <a href="#"><img src="x-icon.png" alt="Twitter" /></a>
-    </div>
+  <nav>
+    <ul class="social-icons">
+      <li>
+        <a href="https://www.facebook.com/" target="_blank">
+          <img src="Screenshot 2025-06-11 142725.png" alt="Facebook" class="social-icon">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/feed/" target="_blank">
+          <img src="Screenshot 2025-06-11 142731.png" alt="LinkedIn" class="social-icon">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+          <img src="Screenshot 2025-06-11 142741.png" alt="YouTube" class="social-icon">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/uscbcampuslife/" target="_blank">
+          <img src="Screenshot 2025-06-11 142747.png" alt="Instagram" class="social-icon">
+        </a>
+      </li>
+    </ul>
+  </nav>
   </footer>
 </body>
 </html>
