--- a/events.html
+++ b/events.html
@@ -55,21 +55,26 @@
         <img src="basketball.jpg" alt="Basketball Event Photo" class="calendar-photo" />
       </aside>
     </section>
-
-    <section class="resources">
-      <div class="resource-card">
-        <img src="presence.jpg" alt="https://uscb.presence.io/" />
-        <p>Presence</p>
-      </div>
-      <div class="resource-card">
-        <img src="imleagues.jpg" alt="https://www.imleagues.com/spa/portal/home" />
-        <p>IMLeagues</p>
-      </div>
-      <div class="resource-card">
-        <img src="uscb-edu.jpg" alt="https://www.uscb.edu/" />
-        <p>USCB.edu</p>
-      </div>
-    </section>
+<section class="resources">
+  <div class="resource">
+    <a href="https://uscb.presence.io/" target="_blank">
+      <img src="path-to-presence-image.jpg" alt="Presence">
+      <p>Presence</p>
+    </a>
+  </div>
+  <div class="resource">
+    <a href="https://www.imleagues.com/" target="_blank">
+      <img src="path-to-imleagues-image.jpg" alt="IMLeagues">
+      <p>IMLeagues</p>
+    </a>
+  </div>
+  <div class="resource">
+    <a href="https://www.uscb.edu/" target="_blank">
+      <img src="path-to-uscb-image.jpg" alt="USCB.edu">
+      <p>USCB.edu</p>
+    </a>
+  </div>
+</section>
   </main>
 
   <footer>
