--- a/events.html
+++ b/events.html
@@ -26,57 +26,53 @@
     </div>
   </header>
 
-  <main>
+ <main>
     <h1 class="page-title">EVENTS</h1>
 
-    <section class="calendar">
+    <div class="calendar-section">
       <div class="calendar-header">
         <div>SEPTEMBER 2025</div>
         <div>CAMPUS LIFE CALENDAR</div>
         <div>USCB</div>
       </div>
-      <table>
-        <!--this will be stylized and refined in CSS -->
-        <tr><td>1</td><td>2</td><td>3<br><span class="tag green">Movie Night</span></td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
-        <tr><td>8</td><td>9</td><td>10<br><span class="tag orange">Fitness Club</span></td><td>11</td><td>12<br><span class="tag yellow">FIFA Night</span></td><td>13</td><td>14</td></tr>
-        <tr><td>15<br><span class="tag pink">MVP Breakfast</span></td><td>16</td><td>17</td><td>18<br><span class="tag yellow">Library Trivia</span></td><td>19</td><td>20</td><td>21</td></tr>
-        <tr><td>22<br><span class="tag blue">Fall Fest</span></td><td>23</td><td>24</td><td>25</td><td>26<br><span class="tag pink">DIY Necklaces</span></td><td>27</td><td>28</td></tr>
-        <tr><td>29</td><td>30<br><span class="tag orange">Stress Relief</span></td><td></td><td></td><td></td><td></td><td></td></tr>
-      </table>
-      <aside class="calendar-sidebar">
+      <div class="calendar-grid">
+        <!-- Weekdays -->
+        <div>1</div><div>2</div><div>3<br>Movie Night</div><div>4</div><div>5</div><div>6</div><div>7</div>
+        <div>8</div><div>9</div><div>10<br>Fitness Club</div><div>11</div><div>12<br>FIFA Night</div><div>13</div><div>14</div>
+        <div>15<br>MVP Breakfast</div><div>16</div><div>17</div><div>18<br>Library Trivia</div><div>19</div><div>20</div><div>21</div>
+        <div>22<br>Fall Fest</div><div>23</div><div>24</div><div>25</div><div>26<br>DIY Necklaces</div><div>27</div><div>28</div>
+        <div>29</div><div>30<br>Stress Relief</div>
+      </div>
+      <div class="platforms">
         <h3>PLATFORMS</h3>
         <ul>
-          <li><button class="platform-btn">CAMPUS REC</button></li>
-          <li><button class="platform-btn">STUDENT LIFE</button></li>
-          <li><button class="platform-btn">CAF/HOUSING</button></li>
-          <li><button class="platform-btn">CLUBS</button></li>
-          <li><button class="platform-btn">ACADEMICS</button></li>
+          <li><button>CAMPUS REC</button></li>
+          <li><button>STUDENT LIFE</button></li>
+          <li><button>CAF/HOUSING</button></li>
+          <li><button>CLUBS</button></li>
+          <li><button>ACADEMICS</button></li>
         </ul>
-        <img src="basketball.jpg" alt="Basketball Event Photo" class="calendar-photo" />
-      </aside>
-    </section>
-<section class="resources">
-  <div class="resource">
-    <a href="https://uscb.presence.io/" target="_blank">
-      <img src="path-to-presence-image.jpg" alt="Presence">
-      <p>Presence</p>
-    </a>
-  </div>
-  <div class="resource">
-    <a href="https://www.imleagues.com/" target="_blank">
-      <img src="path-to-imleagues-image.jpg" alt="IMLeagues">
-      <p>IMLeagues</p>
-    </a>
-  </div>
-  <div class="resource">
-    <a href="https://www.uscb.edu/" target="_blank">
-      <img src="path-to-uscb-image.jpg" alt="USCB.edu">
-      <p>USCB.edu</p>
-    </a>
-  </div>
-</section>
-  </main>
+      </div>
+      <div class="event-image">
+        <img src="basketball-event.jpg" alt="Basketball Event Photo" />
+      </div>
+    </div>
 
+    <div class="links-section">
+      <div class="link-card">
+        <a href="https://uscb.presence.io/"><img src="presence.jpg" alt="Presence"></a>
+        <p>Presence</p>
+      </div>
+      <div class="link-card">
+        <a href="https://www.imleagues.com/spa/portal/home"><img src="imleagues.jpg" alt="IMLeagues"></a>
+        <p>IMLeagues</p>
+      </div>
+      <div class="link-card">
+        <a href="https://www.uscb.edu/"><img src="uscb-site.jpg" alt="USCB.edu"></a>
+        <p>USCB.edu</p>
+      </div>
+    </div>
+  </main>
   <footer>
   <nav>
     <ul class="social-icons">
