--- a/events.html
+++ b/events.html
@@ -29,30 +29,12 @@
  <main>
     <h1 class="page-title">EVENTS</h1>
 
-    <div class="calendar-section">
-      <div class="calendar-header">
-        <div>SEPTEMBER 2025</div>
-        <div>CAMPUS LIFE CALENDAR</div>
-        <div>USCB</div>
-      </div>
-      <div class="calendar-grid">
-        <!-- Weekdays -->
-        <div>1</div><div>2</div><div>3<br>Movie Night</div><div>4</div><div>5</div><div>6</div><div>7</div>
-        <div>8</div><div>9</div><div>10<br>Fitness Club</div><div>11</div><div>12<br>FIFA Night</div><div>13</div><div>14</div>
-        <div>15<br>MVP Breakfast</div><div>16</div><div>17</div><div>18<br>Library Trivia</div><div>19</div><div>20</div><div>21</div>
-        <div>22<br>Fall Fest</div><div>23</div><div>24</div><div>25</div><div>26<br>DIY Necklaces</div><div>27</div><div>28</div>
-        <div>29</div><div>30<br>Stress Relief</div>
-      </div>
-      <div class="platforms">
-        <h3>PLATFORMS</h3>
-        <ul>
-          <li><button>CAMPUS REC</button></li>
-          <li><button>STUDENT LIFE</button></li>
-          <li><button>CAF/HOUSING</button></li>
-          <li><button>CLUBS</button></li>
-          <li><button>ACADEMICS</button></li>
-        </ul>
-      </div>
+   <main>
+    <h1 class="page-title">EVENTS</h1>
+
+    <div class="calendar-image">
+      <img src="calendar-image.jpg" alt="Campus Life Calendar" />
+    </div>
       <div class="event-image">
         <img src="basketball-event.jpg" alt="Basketball Event Photo" />
       </div>
