--- a/events.html
+++ b/events.html
@@ -25,15 +25,11 @@
       </nav>
     </div>
   </header>
-
- <main>
-    <h1 class="page-title">EVENTS</h1>
-
    <main>
     <h1 class="page-title">EVENTS</h1>
 
     <div class="calendar-image">
-      <img src="calendar-image.jpg" alt="Campus Life Calendar" />
+      <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
     </div>
       <div class="event-image">
         <img src="basketball-event.jpg" alt="Basketball Event Photo" />
@@ -42,15 +38,15 @@
 
     <div class="links-section">
       <div class="link-card">
-        <a href="https://uscb.presence.io/"><img src="presence.jpg" alt="Presence"></a>
+        <a href="https://uscb.presence.io/"><img src="fins_up_orientation_leaders.jpg" alt="Presence"></a>
         <p>Presence</p>
       </div>
       <div class="link-card">
-        <a href="https://www.imleagues.com/spa/portal/home"><img src="imleagues.jpg" alt="IMLeagues"></a>
+        <a href="https://www.imleagues.com/spa/portal/home"><img src="volleyball_042.jpg" alt="IMLeagues"></a>
         <p>IMLeagues</p>
       </div>
       <div class="link-card">
-        <a href="https://www.uscb.edu/"><img src="uscb-site.jpg" alt="USCB.edu"></a>
+        <a href="https://www.uscb.edu/"><img src="by-the-river-team_600px.jpg" alt="USCB.edu"></a>
         <p>USCB.edu</p>
       </div>
     </div>
