--- a/events.html
+++ b/events.html
@@ -1,81 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>USCB Campus Life - Events</title>
-  <link rel="stylesheet" href="events.css" />
+  <title>USCB Campus Life – Events</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- Header (shared) -->
   <header>
-    <div class="logo-nav">
-      <img src="Campus Life 2C.png" alt="USCB Campus Life Logo" class="logo" />
+    <div class="container header-inner">
+      <a href="index.html" class="logo">
+        <img src="Campus Life 2C.png" alt="USCB Campus Life Logo" />
+      </a>
       <nav>
         <ul>
-        <li><a href="index.html">Home</a></li>
-  <li><a href="About.html">About</a></li>
-  <li><a href="events.html">Events</a></li>
-  <li><a href="clubs.html">Clubs</a></li>
-  <li><a href="staff.html">Staff</a></li>
-  <li><a href="resources.html">Resources</a></li>
-  <li><a href="news.html">News</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li><input type="text" placeholder="Search" /></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="clubs.html">Clubs</a></li>
+          <li><a href="staff.html">Staff</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class="search-wrap"><input type="text" placeholder="Search" /></li>
         </ul>
       </nav>
     </div>
   </header>
-   <main>
+
+  <!-- Main Content -->
+  <main class="container">
     <h1 class="page-title">EVENTS</h1>
 
+    <!-- Calendar Placeholder -->
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
     </div>
-      <div class="event-image">
-        <img src="basketball-event.jpg" alt="Basketball Event Photo" />
-      </div>
+
+    <!-- Feature Event Image (optional) -->
+    <div class="event-image">
+      <img src="basketball-event.jpg" alt="Basketball Event" />
     </div>
 
+    <!-- Quick Links -->
     <div class="links-section">
-      <div class="link-card">
-        <a href="https://uscb.presence.io/"><img src="fins_up_orientation_leaders.jpg" alt="Presence"></a>
+      <a class="link-card" href="https://uscb.presence.io/">
+        <img src="fins_up_orientation_leaders.jpg" alt="Presence" />
         <p>Presence</p>
-      </div>
-      <div class="link-card">
-        <a href="https://www.imleagues.com/spa/portal/home"><img src="volleyball_042.jpg" alt="IMLeagues"></a>
+      </a>
+
+      <a class="link-card" href="https://www.imleagues.com/spa/portal/home">
+        <img src="volleyball_042.jpg" alt="IMLeagues" />
         <p>IMLeagues</p>
-      </div>
-      <div class="link-card">
-        <a href="https://www.uscb.edu/"><img src="by-the-river-team_600px.jpg" alt="USCB.edu"></a>
+      </a>
+
+      <a class="link-card" href="https://www.uscb.edu/">
+        <img src="by-the-river-team_600px.jpg" alt="USCB.edu" />
         <p>USCB.edu</p>
-      </div>
+      </a>
     </div>
   </main>
+
+  <!-- Footer (shared) -->
   <footer>
-  <nav>
-    <ul class="social-icons">
-      <li>
-        <a href="https://www.facebook.com/" target="_blank">
-          <img src="Screenshot 2025-06-11 142725.png" alt="Facebook" class="social-icon">
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/feed/" target="_blank">
-          <img src="Screenshot 2025-06-11 142731.png" alt="LinkedIn" class="social-icon">
-        </a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-          <img src="Screenshot 2025-06-11 142741.png" alt="YouTube" class="social-icon">
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/uscbcampuslife/" target="_blank">
-          <img src="Screenshot 2025-06-11 142747.png" alt="Instagram" class="social-icon">
-        </a>
-      </li>
-    </ul>
-  </nav>
+    <nav>
+      <ul class="social-icons">
+        <li><a href="https://www.facebook.com/" target="_blank"><img src="Screenshot 2025-06-11 142725.png" alt="Facebook" class="social-icon" /></a></li>
+        <li><a href="https://www.linkedin.com/feed/" target="_blank"><img src="Screenshot 2025-06-11 142731.png" alt="LinkedIn" class="social-icon" /></a></li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="Screenshot 2025-06-11 142741.png" alt="YouTube" class="social-icon" /></a></li>
+        <li><a href="https://www.instagram.com/uscbcampuslife/" target="_blank"><img src="Screenshot 2025-06-11 142747.png" alt="Instagram" class="social-icon" /></a></li>
+      </ul>
+    </nav>
   </footer>
 </body>
 </html>
