--- a/events.html
+++ b/events.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Header (shared) -->
+  <!-- Header (identical to index) -->
   <header>
     <div class="container header-inner">
       <a href="index.html" class="logo">
         <img src="Campus Life 2C.png" alt="USCB Campus Life Logo" />
       </a>
       <nav>
-        <ul>
+        <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="events.html">Events</a></li>
@@ -29,40 +29,36 @@
     </div>
   </header>
 
-  <!-- Main Content -->
   <main class="container">
     <h1 class="page-title">EVENTS</h1>
 
-    <!-- Calendar Placeholder -->
+    <!-- Calendar (auto‑scales within container) -->
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
     </div>
 
-    <!-- Feature Event Image (optional) -->
+    <!-- Optional feature photo -->
     <div class="event-image">
       <img src="basketball-event.jpg" alt="Basketball Event" />
     </div>
 
-    <!-- Quick Links -->
+    <!-- Quick‑link cards in a single row -->
     <div class="links-section">
-      <a class="link-card" href="https://uscb.presence.io/">
+      <a class="link-card" href="https://uscb.presence.io/" target="_blank">
         <img src="fins_up_orientation_leaders.jpg" alt="Presence" />
         <p>Presence</p>
       </a>
-
-      <a class="link-card" href="https://www.imleagues.com/spa/portal/home">
+      <a class="link-card" href="https://www.imleagues.com/spa/portal/home" target="_blank">
         <img src="volleyball_042.jpg" alt="IMLeagues" />
         <p>IMLeagues</p>
       </a>
-
-      <a class="link-card" href="https://www.uscb.edu/">
+      <a class="link-card" href="https://www.uscb.edu/" target="_blank">
         <img src="by-the-river-team_600px.jpg" alt="USCB.edu" />
         <p>USCB.edu</p>
       </a>
     </div>
   </main>
 
-  <!-- Footer (shared) -->
   <footer>
     <nav>
       <ul class="social-icons">
