--- a/About.html
+++ b/About.html
@@ -1,69 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>USCB Campus Life – Events</title>
-  <link rel="stylesheet" href="events.css" />
-</head>
-<body>
+ <head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>
+   About – Campus Life
+  </title>
+ </head>
+ <body>
+  <!-- Header with logo and navigation -->
   <header>
-    <div class="container header-inner">
-      <a href="index.html" class="logo">
-        <img src="Campus Life 2C.png" alt="USCB Campus Life Logo" />
+   <div>
+    <img alt="USCB Campus Life Logo" src="path-to-logo.png">
+   </div>
+   <nav>
+    <ul>
+     <li>
+      <a href="#">
+       Home
       </a>
-      <nav>
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="clubs.html">Clubs</a></li>
-          <li><a href="staff.html">Staff</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li class="search-wrap"><input type="text" placeholder="Search" /></li>
-        </ul>
-      </nav>
-    </div>
+     </li>
+     <li>
+      <a href="#">
+       About
+      </a>
+     </li>
+     <li>
+      <a href="#">
+       Events
+      </a>
+     </li>
+     <li>
+      <a href="#">
+       Clubs
+      </a>
+     </li>
+     <li>
+      <a href="#">
+       Staff
+      </a>
+     </li>
+     <li>
+      <a href="#">
+       Resources
+      </a>
+     </li>
+     <li>
+      <a href="#">
+       News
+      </a>
+     </li>
+     <li>
+      <input placeholder="Search" type="text">
+     </li>
+    </ul>
+   </nav>
   </header>
-
-  <main class="container">
-    <h1 class="page-title">EVENTS</h1>
-
-    <div class="calendar-image">
-      <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
+  <!-- Main content -->
+  <main>
+   <h1>
+    ABOUT
+   </h1>
+   <section>
+    <h2>
+     Section Heading
+    </h2>
+    <img alt="Campus Life Group Photo" src="path-to-group-photo.jpg">
+    <p>
+     Welcome to Campus Life at USC Beaufort!
+     <br>
+     <br>
+     Campus Life is the heartbeat of student engagement at USCB—and we're proud to be the newest and most spirited department on campus! Blending the energy of Student Life with the excitement of Campus Recreation, we're here to create unforgettable experiences for every Sand Shark.
+     <br>
+     <br>
+     We host a little bit of everything—from DIY craft nights and sunset yoga on the bluff, to open mic coffeehouse evenings, game day watch parties, and monthly themed socials (yes, Sharkchella is real!). Our intramural leagues and tournament series keep the competitive spirit alive, with everything from flag football and spikeball to Mario Kart and pickleball.
+     <br>
+     <br>
+     Looking to get involved or make your mark? We oversee all student clubs and organizations—from cultural and academic groups to special interest and leadership councils. If you can't find what you're looking for, we'll help you start something new. We also offer workshops on leadership development, event planning, and community outreach—because we believe your college experience should prepare you for more than just a degree.
+     <br>
+     <br>
+     Need a place to relax or recharge? Drop by the Campus Life Lounge in the Sandbar Center—home to comfy couches, free popcorn Fridays, a crafting nook, and the best playlist on campus.
+     <br>
+     <br>
+     At Campus Life, we believe college should be more than just class schedules and exams. It should be meaningful, memorable, and fun. Whether you're here to connect, lead, compete, create, or simply enjoy the vibe, we're here to support you every step of the way.
+     <br>
+     <br>
+     This is your time—make it count. Dive into Campus Life.
+    </p>
+   </section>
+   <!-- Photo grid -->
+   <section>
+    <h2>
+     Section Heading
+    </h2>
+    <div>
+     <img alt="Students at fountain" src="path-to-photo1.jpg">
+     <img alt="Students playing volleyball" src="path-to-photo2.jpg">
+     <img alt="Group holding USCB flag" src="path-to-photo3.jpg">
     </div>
-
-    <div class="event-image">
-      <img src="basketball-event.jpg" alt="Basketball Event" />
+    <div>
+     <img alt="Students posing in gym" src="path-to-photo4.jpg">
+     <img alt="Group cheering" src="path-to-photo5.jpg">
+     <img alt="Group photo in front of Hargray building" src="path-to-photo6.jpg">
     </div>
-
-    <div class="links-section">
-      <a class="link-card" href="https://uscb.presence.io/" target="_blank">
-        <img src="fins_up_orientation_leaders.jpg" alt="Presence" />
-        <p>Presence</p>
-      </a>
-      <a class="link-card" href="https://www.imleagues.com/spa/portal/home" target="_blank">
-        <img src="volleyball_042.jpg" alt="IMLeagues" />
-        <p>IMLeagues</p>
-      </a>
-      <a class="link-card" href="https://www.uscb.edu/" target="_blank">
-        <img src="by-the-river-team_600px.jpg" alt="USCB.edu" />
-        <p>USCB.edu</p>
-      </a>
+    <div>
+     <img alt="Group outdoors" src="path-to-photo7.jpg">
+     <img alt="Students working on laptop" src="path-to-photo8.jpg">
+     <img alt="Universal trip group" src="path-to-photo9.jpg">
     </div>
+   </section>
   </main>
-
-  <footer>
-    <nav>
-      <ul class="social-icons">
-        <li><a href="https://www.facebook.com/" target="_blank"><img src="Screenshot 2025-06-11 142725.png" alt="Facebook" class="social-icon" /></a></li>
-        <li><a href="https://www.linkedin.com/feed/" target="_blank"><img src="Screenshot 2025-06-11 142731.png" alt="LinkedIn" class="social-icon" /></a></li>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="Screenshot 2025-06-11 142741.png" alt="YouTube" class="social-icon" /></a></li>
-        <li><a href="https://www.instagram.com/uscbcampuslife/" target="_blank"><img src="Screenshot 2025-06-11 142747.png" alt="Instagram" class="social-icon" /></a></li>
-      </ul>
-    </nav>
-  </footer>
-</body>
+ </body>
 </html>
