--- a/events.html
+++ b/events.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>USCB Campus Life – Events</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="events.css" />
 </head>
 <body>
-  <!-- Header (identical to index) -->
   <header>
     <div class="container header-inner">
       <a href="index.html" class="logo">
@@ -32,17 +31,14 @@
   <main class="container">
     <h1 class="page-title">EVENTS</h1>
 
-    <!-- Calendar (auto‑scales within container) -->
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
     </div>
 
-    <!-- Optional feature photo -->
     <div class="event-image">
       <img src="basketball-event.jpg" alt="Basketball Event" />
     </div>
 
-    <!-- Quick‑link cards in a single row -->
     <div class="links-section">
       <a class="link-card" href="https://uscb.presence.io/" target="_blank">
         <img src="fins_up_orientation_leaders.jpg" alt="Presence" />
