--- a/About.html
+++ b/About.html
@@ -6,6 +6,7 @@
   <title>
    About – Campus Life
   </title>
+    <link rel="stylesheet" href="contact.css" />
  </head>
  <body>
   <!-- Header with logo and navigation -->
