--- a/About.html
+++ b/About.html
@@ -1,61 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>
-   About – Campus Life
-  </title>
-    <link rel="stylesheet" href="contact.css" />
- </head>
- <body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About – Campus Life</title>
+  <link rel="stylesheet" href="About.css" />
+</head>
+<body>
+
   <!-- Header with logo and navigation -->
   <header>
-   <div>
-    <img alt="USCB Campus Life Logo" src="path-to-logo.png">
-   </div>
-   <nav>
-    <ul>
-     <li>
-      <a href="#">
-       Home
-      </a>
-     </li>
-     <li>
-      <a href="#">
-       About
-      </a>
-     </li>
-     <li>
-      <a href="#">
-       Events
-      </a>
-     </li>
-     <li>
-      <a href="#">
-       Clubs
-      </a>
-     </li>
-     <li>
-      <a href="#">
-       Staff
-      </a>
-     </li>
-     <li>
-      <a href="#">
-       Resources
-      </a>
-     </li>
-     <li>
-      <a href="#">
-       News
-      </a>
-     </li>
-     <li>
-      <input placeholder="Search" type="text">
-     </li>
-    </ul>
-   </nav>
+    <div>
+      <img alt="USCB Campus Life Logo" src="Campus Life 2C.png" />
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Clubs</a></li>
+        <li><a href="#">Staff</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><input type="text" placeholder="Search" aria-label="Search" /></li>
+      </ul>
+    </nav>
   </header>
   <!-- Main content -->
   <main>
