--- a/events.html
+++ b/events.html
@@ -3,31 +3,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>USCB Campus Life – Events</title>
+  <title>Events – Campus Life</title>
   <link rel="stylesheet" href="events.css" />
 </head>
 <body>
-  <header>
-    <div class="container header-inner">
-      <a href="index.html" class="logo">
-        <img src="Campus Life 2C.png" alt="USCB Campus Life Logo" />
-      </a>
-      <nav>
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="clubs.html">Clubs</a></li>
-          <li><a href="staff.html">Staff</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li class="search-wrap"><input type="text" placeholder="Search" /></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
 
+  <!-- Header with logo and navigation -->
+  <header>
+    <div>
+      <img alt="USCB Campus Life Logo" src="Campus Life 2C.png" />
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Clubs</a></li>
+        <li><a href="#">Staff</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><input type="text" placeholder="Search" aria-label="Search" /></li>
+      </ul>
+    </nav>
+  </header>
   <main class="container">
     <h1 class="page-title">EVENTS</h1>
 
