--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
-        <li><a href="#">Events</a></li>
+        <li><a href="#">Events.html</a></li>
         <li><a href="#">Clubs</a></li>
         <li><a href="#">Staff</a></li>
         <li><a href="#">Resources</a></li>
