--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
   <!-- Header with logo and navigation -->
   <header>
     <div>
-      <img alt="USCB Campus Life Logo" src="Campus Life 2C.png" />
+     <center> <img alt="USCB Campus Life Logo" src="Campus Life 2C.png" /> </center>
     </div>
     <nav>
       <ul>
