--- a/About.html
+++ b/About.html
@@ -36,7 +36,7 @@
     <h2>
      Section Heading
     </h2>
-    <img alt="Campus Life Group Photo" src="path-to-group-photo.jpg">
+    <img alt="Campus Life Group Photo" src="IMG_2109.jpg">
     <p>
     <center> Welcome to Campus Life at USC Beaufort!
      <br>
@@ -52,19 +52,20 @@
      Section Heading
     </h2>
    <center> <div>
-     <img alt="Students at fountain" src="path-to-photo1.jpg">
-     <img alt="Students playing volleyball" src="path-to-photo2.jpg">
-     <img alt="Group holding USCB flag" src="path-to-photo3.jpg">
+     <img alt="Students at fountain" src="USCB-Student-Ambassadors-in-Rec-Center.jpg
+">
+     <img alt="Students playing volleyball" src="StudentPhoto.jpeg">
+     <img alt="Group holding USCB flag" src="Lamda_Pi_Eta.png">
     </div>
     <div>
-     <img alt="Students posing in gym" src="path-to-photo4.jpg">
-     <img alt="Group cheering" src="path-to-photo5.jpg">
-     <img alt="Group photo in front of Hargray building" src="path-to-photo6.jpg">
+     <img alt="Students posing in gym" src="USCB-Student-Ambassadors-in-Rec-Center.jpg">
+     <img alt="Group cheering" src="USCB-Students.jpg">
+     <img alt="Group photo in front of Hargray building" src="admissions-menu3.jpg">
     </div>
     <div>
-     <img alt="Group outdoors" src="path-to-photo7.jpg">
-     <img alt="Students working on laptop" src="path-to-photo8.jpg">
-     <img alt="Universal trip group" src="path-to-photo9.jpg">
+     <img alt="Group outdoors" src="by-the-river-team_600px.jpg">
+     <img alt="Students working on laptop" src="fins_up_orientation_leaders.jpg">
+     <img alt="Universal trip group" src="2024-03-15-tour-hargray.jpeg">
     </div> </center>
    </section>
   </main>
