--- a/events.html
+++ b/events.html
@@ -8,25 +8,23 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
-  <div class="container header-inner">
-    <a href="index.html" class="logo">
-      <img src="Campus Life 2C.png" alt="USCB Campus Life Logo" />
-    </a>
-    <nav>
-      <ul class="nav-list">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="clubs.html">Clubs</a></li>
-        <li><a href="staff.html">Staff</a></li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li class="search-wrap"><input type="text" placeholder="Search" /></li>
-      </ul>
-    </nav>
-  </div>
+<header>
+  <figure>
+    <img alt="USCB Campus Life Logo" src="Campus Life 2C.png">
+  </figure>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="About.html">About</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="clubs.html">Clubs</a></li>
+      <li><a href="staff.html">Staff</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><input type="text" placeholder="Search" /></li>
+    </ul>
+  </nav>
 </header>
   <main class="container">
     <h1 class="page-title">EVENTS</h1>
