--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
 </header>
   <main class="container">
     <h1 class="page-title">EVENTS</h1>
-
+<center>
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
     </div>
@@ -50,7 +50,7 @@
         <img src="by-the-river-team_600px.jpg" alt="USCB.edu" />
         <p>USCB.edu</p>
       </a>
-    </div>
+    </div> </center>
   </main>
 
   <footer>
