--- a/events.html
+++ b/events.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ven<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>USCB Campus Life – About</title>
+  <title>USCB Campus Life – Events</title>
   <link rel="stylesheet" href="events.css" />
 </head>
 <body>
